--- a/cadprev/build.gradle
+++ b/cadprev/build.gradle
@@ -24,7 +24,12 @@ repositories {
 
 dependencies {
 	compile('org.springframework.boot:spring-boot-starter')
-	compile('org.seleniumhq.selenium:selenium-chrome-driver:2.53.1')
+	compile('org.seleniumhq.selenium:selenium-api:3.6.0')
+	//compile('org.seleniumhq.selenium:selenium-support:3.6.0')
+	compile('org.seleniumhq.selenium:selenium-remote-driver:3.6.0')
+
+	compile('org.seleniumhq.selenium:selenium-java:3.6.0')
+	compile('org.seleniumhq.selenium:selenium-firefox-driver:3.6.0')
 
 	testCompile('org.springframework.boot:spring-boot-starter-test')
 }
