--- a/cadprev-generator/build.gradle
+++ b/cadprev-generator/build.gradle
@@ -24,9 +24,10 @@ repositories {
 
 dependencies {
 	compile('org.springframework.boot:spring-boot-starter')
+	compile('org.springframework.boot:spring-boot-starter-logging')
+
 	compile('org.seleniumhq.selenium:selenium-api:3.6.0')
 	compile('org.seleniumhq.selenium:selenium-remote-driver:3.6.0')
-
 	compile('org.seleniumhq.selenium:selenium-java:3.6.0')
 	compile('org.seleniumhq.selenium:selenium-firefox-driver:3.6.0')
 
