--- a/cadprev-reader/build.gradle
+++ b/cadprev-reader/build.gradle
@@ -24,6 +24,7 @@ repositories {
 dependencies {
 	compile('org.springframework.boot:spring-boot-starter-data-jpa')
 	compile('org.apache.commons:commons-lang3:3.7')
+	compile('org.apache.commons:commons-io:1.3.2')
 	compile('mysql:mysql-connector-java:6.0.6')
 	compile('org.apache.pdfbox:pdfbox:2.0.8')
 
