--- a/cadprev-email-reader/build.gradle
+++ b/cadprev-email-reader/build.gradle
@@ -25,6 +25,8 @@ repositories {
 dependencies {
 	compile('org.springframework.boot:spring-boot-starter')
 	compile('org.springframework.boot:spring-boot-starter-logging')
+	compile('org.apache.commons:commons-lang3:3.7')
+	compile('org.apache.commons:commons-io:1.3.2')
 	compile('org.apache.pdfbox:pdfbox:2.0.8')
 
 	testCompile('org.springframework.boot:spring-boot-starter-test')
