--- a/cadprev-generator/build.gradle
+++ b/cadprev-generator/build.gradle
@@ -26,7 +26,7 @@ dependencies {
 	compile('org.springframework.boot:spring-boot-starter-data-jpa')
 	compile('mysql:mysql-connector-java:6.0.6')
 	compile('org.springframework.boot:spring-boot-starter-logging')
-
+	compile('org.apache.commons:commons-lang3:3.7')
 	compile('org.seleniumhq.selenium:selenium-api:3.6.0')
 	compile('org.seleniumhq.selenium:selenium-remote-driver:3.6.0')
 	compile('org.seleniumhq.selenium:selenium-java:3.6.0')
