--- a/cadprev-generator/src/main/resources/application.properties
+++ b/cadprev-generator/src/main/resources/application.properties
@@ -8,6 +8,20 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 spring.jpa.hibernate.ddl-auto = update
 spring.jpa.hibernate.naming-strategy = org.hibernate.cfg.ImprovedNamingStrategy
 
+folder-download = /home/eduardorost/Downloads
+folder-download-dair = /home/eduardorost/Downloads/DAIR/
+url-cadprev = http://cadprev.previdencia.gov.br/Cadprev/faces/pages/index.xhtml
+consultas-publicas = //*[@id=\"udm\"]/li[2]
+aplicacoes = //*[@id=\"udm\"]/li[2]/ul/li[2]/a/label
+consultas-demonstrativos = //*[@id=\"udm\"]/li[2]/ul/li[2]/ul/li[2]/a/label
+unidade-federativa = //*[@id=\"form:unidadeFederativa\"]
+cidade = //*[@id=\"form:ente\"]
+encerramento-mes = //*[@id=\"form:finalidadeDAIR:0\"]
+operacoes = //*[@id=\"form:finalidadeDAIR:1\"]
+intermediario = //*[@id=\"form:finalidadeDAIR:2\"]
+consultar = //*[@id=\"form:botaoConsultar\"]
+download = //*[@id=\"formTabela:tabDAIR:0:botaoImprimirDairPdf\"]
+
 logging.file = /logs/cadprev/cadprev-generator.log
 logging.level.org.springframework.web = INFO
 logging.level.root = INFO
