--- a/cadprev-generator/src/main/resources/application.properties
+++ b/cadprev-generator/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url = jdbc:mysql://localhost:3306/dair
+spring.datasource.url = jdbc:mysql://localhost:3306/dairTeste
 spring.datasource.username = root
 spring.datasource.password = root
 spring.datasource.testWhileIdle = true
