--- a/cadprev-generator/src/main/resources/application.properties
+++ b/cadprev-generator/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url = jdbc:mysql://localhost:3306/dairTeste
-spring.datasource.username = root
-spring.datasource.password = root
+spring.datasource.url = jdbc:mysql://cadprecv.cz2yv1z0leiy.us-east-1.rds.amazonaws.com:3306/dair
+spring.datasource.username = cadprev
+spring.datasource.password = password
 spring.datasource.testWhileIdle = true
 spring.datasource.validationQuery = SELECT 1
 spring.jpa.show-sql = true
@@ -8,12 +8,14 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 spring.jpa.hibernate.ddl-auto = update
 spring.jpa.hibernate.naming-strategy = org.hibernate.cfg.ImprovedNamingStrategy
 
-folder-download = /home/eduardorost/Downloads
-folder-download-dair = /home/eduardorost/Downloads/DAIR/
+folder-download = #{systemProperties['user.home']}/Downloads/
+folder-download-dair = #{systemProperties['user.home']}/Downloads/DAIR/
 url-cadprev = http://cadprev.previdencia.gov.br/Cadprev/faces/pages/index.xhtml
+
 consultas-publicas = //*[@id=\"udm\"]/li[2]
-aplicacoes = //*[@id=\"udm\"]/li[2]/ul/li[2]/a/label
-consultas-demonstrativos = //*[@id=\"udm\"]/li[2]/ul/li[2]/ul/li[2]/a/label
+aplicacoes = //*[@id=\"udm\"]/li[2]/ul/li[3]/a/label
+consultas-demonstrativos = //*[@id=\"formMenu:pub_ir_con2_old\"]
+
 unidade-federativa = //*[@id=\"form:unidadeFederativa\"]
 cidade = //*[@id=\"form:ente\"]
 encerramento-mes = //*[@id=\"form:finalidadeDAIR:0\"]
