--- a/cadprev-generator/build.gradle
+++ b/cadprev-generator/build.gradle
@@ -27,10 +27,11 @@ dependencies {
 	compile('mysql:mysql-connector-java:6.0.6')
 	compile('org.springframework.boot:spring-boot-starter-logging')
 	compile('org.apache.commons:commons-lang3:3.7')
-	compile('org.seleniumhq.selenium:selenium-api:3.6.0')
-	compile('org.seleniumhq.selenium:selenium-remote-driver:3.6.0')
-	compile('org.seleniumhq.selenium:selenium-java:3.6.0')
-	compile('org.seleniumhq.selenium:selenium-firefox-driver:3.6.0')
+	compile('org.seleniumhq.selenium:selenium-api:3.14.0')
+	compile('org.seleniumhq.selenium:selenium-remote-driver:3.14.0')
+	compile('org.seleniumhq.selenium:selenium-java:3.14.0')
+	compile('org.seleniumhq.selenium:selenium-firefox-driver:3.14.0')
+	compile('org.awaitility:awaitility:3.1.5')
 
 	testCompile('org.springframework.boot:spring-boot-starter-test')
 }
