--- a/cadprev-reader/src/main/resources/application.properties
+++ b/cadprev-reader/src/main/resources/application.properties
@@ -1,12 +1,14 @@
-spring.datasource.url = jdbc:mysql://localhost:3306/dair
-spring.datasource.username = root
-spring.datasource.password = root
+spring.datasource.url = jdbc:mysql://cadprecv.cz2yv1z0leiy.us-east-1.rds.amazonaws.com:3306/dair
+spring.datasource.username = cadprev
+spring.datasource.password = password
 spring.datasource.testWhileIdle = true
 spring.datasource.validationQuery = SELECT 1
 spring.jpa.show-sql = true
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 spring.jpa.hibernate.ddl-auto = update
 spring.jpa.hibernate.naming-strategy = org.hibernate.cfg.ImprovedNamingStrategy
+
+folder-download-dair = #{systemProperties['user.home']}/Downloads/DAIR/
 
 logging.file = /logs/cadprev/cadprev-reader.log
 logging.level.org.springframework.web = INFO
